# crabmq

./: .gitignore  Cargo.toml  arch.md  crabmq_raft_refactor_plan.md  crabmq_raft_refactor_v2_clean_architecture.md  readme.md  test_result.md  todo.md
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
broker/: Cargo.toml  readme.md
broker/src/: broker.rs  config.rs  consumer_group.rs  consumer_group_v2.rs  flow_controller.rs  lib.rs  message_bus.rs  partition.rs
client/: Cargo.toml
client/src/: client.rs  flow_controller.rs  lib.rs
cmd/client/: Cargo.toml
cmd/client-deprecated/: Cargo.toml
cmd/client-deprecated/src/: main.rs
cmd/client/src/: main.rs
cmd/client_bench/: Cargo.toml
cmd/client_bench/assets/: bench.result
cmd/client_bench/src/: main.rs
cmd/client_sub_bench/: Cargo.toml
cmd/client_sub_bench/src/: main.rs
cmd/crabmqd/: Cargo.toml
cmd/crabmqd/src/: main.rs
cmd/storage_bench/: Cargo.toml  README_flamegraph.md
cmd/storage_bench/assets/: bench.result
cmd/storage_bench/src/: main.rs
common/: Cargo.toml
common/src/: global.rs  lib.rs  util.rs
common/src/util/: mod.rs  ordered_map.rs  other.rs  switch_vec.rs
coo/: Cargo.toml
coo/src/: broker_status.rs  command.rs  config.rs  conn.rs  consumer_group.rs  coo.rs  coo_service.rs  event_bus.rs  lib.rs  partition.rs
coo/src/raftx/: grpc_service.rs  mailbox_message_type.rs  mod.rs  peer.rs  raw_node.rs
core/: Cargo.toml
core/src/: channel.rs  client.rs  config.rs  conn.rs  crab.rs  crabd.rs  disk_queue.rs  lib.rs  message.rs  metadata.rs  params.rs  protocol.rs  service.rs  tcp.rs  topic.rs  tsuixuq.rs  tsuixuqd.rs
core/src/cache/: cache.rs  memory.rs  mod.rs  queue.rs  slide_window.rs
core/src/compress/: compress.rs  mod.rs  nope.rs
core/src/message/: mod.rs  v1.rs
core/src/message_bus/: mod.rs  topic_bus.rs
core/src/message_manager/: mod.rs  topic_message.rs
core/src/message_sub/: mod.rs  topic_sub.rs
core/src/storage/: mod.rs  storage.rs
core/src/storage/disk/: config.rs  defer.rs  instant.rs  message_manager.rs  mod.rs  readme.md
core/src/storage/disk/record/: fd_cache.rs  index.rs  mod.rs  normal.rs  time.rs
core/src/storage/dummy/: mod.rs
core/src/storage/local/: defer.rs  instant.rs  mod.rs  record.rs
core/src/topic/: message_manager.rs  mod.rs  topic.rs
core/src/topic/message_manager/: dummy.rs  mod.rs
core/src/topic/message_manager/disk/: defer.rs  instant.rs  mod.rs
crabmqd/: Cargo.toml
crabmqd/src/: main.rs
docs/: 分布式事务.md  分布式难度.md  副本一致性.md  副本一致性实施计划-问题对比分析.md  副本一致性实施计划.md  副本一致性审阅建议.md  消费者组重新分配-并发问题解决方案.md  系统架构图.md  系统架构图.puml
grpcx/: Cargo.toml  build.rs
grpcx/src/: leader.rs  lib.rs  node.rs  smart_client.rs  topic_meta.rs
logic_node/: Cargo.toml  README.md
logic_node/src/: lib.rs  logic_node.rs
protocol/: Cargo.toml
protocol/src/: broker_coo.rs  client_coo.rs  common.rs  consts.rs  coo_raft.rs  err.rs  error.rs  lib.rs  protocol.rs
protocol/src/message/: mod.rs  v1.rs
protocol/src/message_deprecated/: v1.rs
protocol/src/protocol/: mod.rs  v1.rs
protocol/src/protocol/v1/: auth.rs  bin_message.rs  common_reply.rs  dispatch_message.rs  identity.rs  mod.rs  patch.rs  publish.rs  reply.rs  subscribe.rs  touch.rs  update.rs
protocol/src/protocol_deprecated/: mod.rs  v1.rs
protocolv2/: Cargo.toml
protocolv2/src/: broker_coo.rs  client_coo.rs  common.rs  coo_raft.rs  err.rs  lib.rs
protos/: broker_coo.proto  client_broker.proto  client_coo.proto  common.proto  coo_raft.proto
raftx/: Cargo.toml
raftx/src/: lib.rs  mailbox.rs  node.rs  peer.rs  raw_node.rs  storage.rs
raftxv2/: Cargo.toml
raftxv2/src/: lib.rs  mailbox.rs  node.rs  peer.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/src/compress/: nope.rs
storage/src/disk/: config.rs  defer.rs  message_manager.rs  mod.rs
storage/src/disk/record/: fd_cache.rs  index.rs  mod.rs  normal.rs  time.rs
storagev2/: Cargo.toml  README_rocksdb_integration.md  README_rocksdb_readonly_solution.md
storagev2/assets/: bench.result  zero-copy.md
storagev2/src/: lib.rs  metrics.rs  serializer.rs
storagev2/src/disk/: config.rs  disk_storage.rs  fd_cache.rs  flusher.rs  meta.rs  mod.rs  prealloc.md  prealloc.rs  readme.md  writer.rs
storagev2/src/disk/compress/: mod.rs  nope.rs
storagev2/src/disk/fd/: README.md  mmap.rs  mod.rs  vectored.rs
storagev2/src/disk/partition_index/: mod.rs
storagev2/src/disk/reader/: mod.rs
storagev2/src/disk/writer/: buffer.rs  disk_bench.rs  flusher.rs  mod.rs
storagev2/src/disk/writer/buffer/: data.rs  index.rs  mod.rs  switch_queue.rs
storagev2/src/mem/: mod.rs
storagev2/src/serializer/: rkyv_impl.rs  sg_io.rs
transporter/: Cargo.toml
transporter/src/: err.rs  lib.rs  tcp.rs
tsuixuqd/: Cargo.toml
tsuixuqd/src/: main.rs
