
# [dev-dependencies]
# criterion = "0.6.0"

[workspace]
resolver = "2"
members = [
    "common",
    "core",
    "cmd/crabmqd",
    "protocol",
    "storage",
    "broker",
    "coo",
    "logic_node",
    "storagev2",
    "grpcx",
    "client", "cmd/client_bench", "cmd/storage_bench",
]
# resolver = "2"
