
# [dev-dependencies]
# criterion = "0.6.0"

[workspace]
resolver = "2"

# members = [
#    "common",
#    "core",
#    "cmd/crabmqd",
#    "protocol",
#    "storage",
#    "broker",
#    "coo",
#    "logic_node",
#    "storagev2",
#    "grpcx",
#    "client", "cmd/client_bench", "cmd/storage_bench", "cmd/client_sub_bench", "protocolv2", 
#    "raftx", "transporter",
# ]

members = [
    "common",
    "protocolv2",
    "storagev2",
    "transporter",
    "raftx", "raftxv2",
]
