[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
bytes = "1.10.1"
dashmap = "6.1.0"
grpcx = { version = "0.1.0", path = "../grpcx" }
log = "0.4.27"
prost = "0.13.5"
storagev2 = { version = "0.1.0", path = "../storagev2" }
tokio = "1.45.0"
tonic = "0.13.1"
