[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
bytes = "1.10.1"
chrono = "0.4.41"
crossbeam = "0.8.4"
dashmap = "6.1.0"
futures = "0.3.31"
grpcx = { version = "0.1.0", path = "../grpcx" }
log = "0.4.27"
nanoid = "0.4.0"
prost = "0.13.5"
storagev2 = { version = "0.1.0", path = "../storagev2" }
sysinfo = { version = "0.35.1", features = [
    "component",
    "disk",
    "network",
    "system",
    "user",
    "objc2-io-kit",
] }
thiserror = "2.0.12"
tokio = "1.45.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tonic = "0.13.1"
