[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
dashmap = "6.1.0"
grpcx = { version = "0.1.0", path = "../grpcx" }
indexmap = "2.9.0"
log = "0.4.27"
murmur3 = "0.5.2"
tokio = "1.45.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tonic = "0.13.1"
