[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = "0.4.41"
crossbeam = { version = "0.8.4", features = ["crossbeam-deque"] }
dashmap = "6.1.0"
grpcx = { version = "0.1.0", path = "../grpcx" }
indexmap = { version = "2.9.0", features = ["quickcheck"] }
log = "0.4.27"
murmur3 = "0.5.2"
nanoid = "0.4.0"
tokio = "1.45.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tonic = "0.13.1"
