[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["net", "full"] }
anyhow = "1.0.81"
tokio-util = { version = "0.7.10", features = ["net"] }
lazy_static = "1.4.0"
rs-snowflake = "0.6.0"
futures = "0.3.30"
parking_lot = "0.12.2"
tracing = "0.1.40"
rand = "0.8.5"
