[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytes = "1.6.0"
common = { version = "0.1.0", path = "../common" }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rsbit = { version = "*", git = "https://github.com/youngbloood/rsbit.git" }
