[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytes = "1.6.0"
common = { version = "0.1.0", path = "../common" }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rsbit = { version = "*", git = "https://github.com/youngbloood/rsbit.git" }
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive", "std", "cargo"] }
config = "0.14.0"
serde = { version = "1.0.201", features = ["derive", "std"] }
tracing-appender = "0.2.3"
parking_lot = { version = "0.12.2", features = ["send_guard"] }
lazy_static = "1.4.0"
chrono = "0.4.38"
semver = "1.0.23"
rand = { version = "0.8.5", features = ["std_rng"] }
async-trait = "0.1.80"
