[package]
name = "grpcx"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
tokio = "1.45.0"
dashmap = "6.1.0"
log = "0.4.27"
tower = "0.5.2"
async-trait = "0.1.88"
pin-project = "1.1.10"
deadpool = "0.12.2"
bb8 = "0.9.0"
backoff = "0.4.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
async-stream = "0.3.6"
futures = "0.3.31"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5"
