[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
chrono = "0.4.38"
common = { version = "0.1.0", path = "../common" }
tokio = "1.38.0"
tracing = "0.1.40"
rsbit = { version = "*", git = "https://github.com/youngbloood/rsbit.git" }
lazy_static = "1.5.0"
