[package]
name = "raftxv2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
bytes = "1.11.0"
dashmap = "6.1.0"
log = "0.4.29"
parking_lot = "0.12.5"
protobuf = {version = "3.7.2",features=["bytes","with-bytes"]}
protocolv2 = { version = "0.1.0", path = "../protocolv2" }
raft = "0.7.0"
serde = "1.0.228"
sled = "0.34.7"
tokio = {version = "1.49.0",features = ["full"]}
tokio-util = "0.7.18"
transporter = { version = "0.1.0", path = "../transporter" }
