[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
common = { version = "0.1.0", path = "../common" }
enum_dispatch = "0.3.13"
protocol = { version = "0.1.0", path = "../protocol" }
serde = "1.0.219"
tokio = "1.44.1"
tracing = "0.1.41"
async-trait = "0.1.80"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "std", "cargo"] }
parking_lot = { version = "0.12.2", features = ["send_guard"] }
rand = { version = "0.8.5", features = ["std_rng"] }
crossbeam = "0.8.4"
lru = "0.13.0"
tantivy = "0.22.0"
dashmap = "6.1.0"
tokio-util = "0.7.15"
chrono = "0.4.40"
serde_json = "1.0.120"
regex = "1.10.4"
dynamic_queue = { version = "0.1.2", git = "https://github.com/youngbloood/dynamic_queue.git", tag = "0.1.3" }
