[package]
name = "storagev2"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
cfg-if = "1.0.0"
chrono = "0.4.41"
common = { version = "0.1.0", path = "../common" }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
crossbeam-channel = "0.5.15"
dashmap = { version = "6.1.0", features = ["serde"] }
defer = "0.2.1"
futures = "0.3.31"
governor = "0.10.0"
libc = "0.2.172"
log = "0.4.27"
lru = "0.14.0"
notify = { version = "8.0.0", features = ["crossbeam-channel"] }
rand = "0.9.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
# tokio-uring = "0.5.0"
tokio-util = "0.7.15"
tracing = "0.1.41"
winapi = { version = "0.3.9", features = ["fileapi"] }
