[package]
name = "storagev2"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
common = { version = "0.1.0", path = "../common" }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
dashmap = { version = "6.1.0", features = ["serde"] }
libc = "0.2.172"
log = "0.4.27"
lru = "0.14.0"
murmur3 = "0.5.2"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-util = "0.7.15"
rocksdb = "0.23.0"
once_cell = "1.21.3"
rkyv = "0.8.10"
futures = "0.3.31"
tempfile = "3.10.1"
