[package]
name = "tsuixuqd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "std", "cargo"] }
common = { version = "0.1.0", path = "../common" }
config = "0.14.0"
core = { version = "0.1.0", path = "../core" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
