[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["std", "cargo", "derive"] }
common = { version = "0.1.0", path = "../../common" }
# clap_derive = { version = "4.5.4", features = ["debug"] }
core = { version = "0.1.0", path = "../../core" }
futures = "0.3.30"
inquire = "0.7.5"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# console-subscriber = "0.2.0"
