[package]
name = "client_sub_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
client = { version = "0.1.0", path = "../../client" }
common = { version = "0.1.0", path = "../../common" }
env_logger = "0.11.8"
futures = "0.3.31"
grpcx = { version = "0.1.0", path = "../../grpcx" }
hdrhistogram = "7.5.4"
rand = "0.9.1"
structopt = "0.3.26"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
