[package]
name = "storage_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.31"
governor = "0.10.0"
nanoid = "0.4.0"
pprof = { version = "0.15.0", features = ["flamegraph"] }
rand = "0.9.1"
storagev2 = { version = "0.1.0", path = "../../storagev2" }
tokio = { version = "1.45.1", features = ["full"] }
